# bevy_game

./: Cargo.toml
notes/: mesh.md
src/: main.rs  voxel.rs
src/fast_voxels/: base_types.rs  blocks.rs  greedy_quad.rs  mesh_gen.rs  mod.rs  voxel.wgsl  voxel_pipeline.rs  voxel_plugin.rs
src/player/: camera.rs
src/shader_manager/: shaders.rs
src/shaders/: voxel.wgsl
src/voxel/: chunk_manager.rs  mesh_gen.rs  mod.rs  voxel.rs  voxel_shaders.rs  voxel_types.rs
