[package]
    name = "voxel_renderer"
    version = "0.1.0"
    edition = "2024"

[profile.dev]
    opt-level = 1

[profile.dev.package."*"]
    opt-level = 3

[dependencies]
    bevy = "0.18.0"
    strum = "0.28.0"
    strum_macros = "0.28.0"

[dependencies.uuid]
    version = "1.19.0"
    features = [
        "v4",
    ]
